added joining room

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,27 +11,10 @@
     {% include 'nav.html' %}
     
     <main>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li class="{% if message.tags %}{{ message.tags }} {% endif %}px-5 py-5
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-            bg-teal-100 border-teal-600
-        {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-            bg-red-100 border-red-600
-        {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-            bg-sky-100 border-sky-600
-        {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
-            bg-yellow-100 border-yellow-600
-        {% endif %} border-l-8">
-            {{ message }}
-        </li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+    {% include 'messages.html' %}
         <section class="px-40 pt-10">
             {% block body %}{% endblock body %}
-        </secttion>
+        </section>
     </main>
     {% include 'footer.html' %}
 </body>
