--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="flex justify-between items-center px-20 py-5 bg-slate-100 text-gray-500">
+<nav class="flex justify-between items-center px-20 py-5 h-16 bg-slate-100 text-gray-500">
     <ul class="flex justify-between items-center gap-5">
         <li>
             <a href="{% url 'core:home' %}" class="text-2xl text-indigo-500 font-bold">Grape</a>
