--- a/templates/rooms/detail.html
+++ b/templates/rooms/detail.html
@@ -7,14 +7,14 @@
         <h1 class="text-4xl">{{ room.title }}</h1>
         <div class="flex justify-between items-center gap-10">
             {% if room.creator == user or user.is_admin %}
-            <a href="{% url 'rooms:room-delete' room.pk %}" class="w-40 block bg-red-500 hover:bg-red-600 rounded p-2 text-white text-center">Delete</a>
+                <a href="{% url 'rooms:room-delete' room.pk %}" class="w-40 block bg-red-500 hover:bg-red-600 rounded p-2 text-white text-center">Delete</a>
             {% endif %}
             {% if room.creator ==  user %}
                 <a href="{% url 'rooms:room-edit' room.pk %}" class="w-40 block bg-indigo-500 hover:bg-indigo-600 rounded p-2 text-white text-center">Edit</a>
             {% endif %}
         </div>
     </div>
-    <table class="w-full">
+    <table class="w-full mb-5">
         <tbody>
             <tr>
                 <td>Title</td>
@@ -34,4 +34,22 @@
             </tr>
         </tbody>
     </table>
+    <div class="flex flex-col justify-between items-stretch w-full h-96 bg-slate-400 rounded-md p-2">
+        <ul class="w-full h-5/6">
+            {% for message in room.messages.all %}
+                <li class="w-1/2 my-2 ml-auto p-2 bg-slate-200 text-black rounded-md">
+                    <p class="text-slate-500">
+                        {{ message.sender }}
+                    </p>
+                    <p class="">
+                        {{ message.text }}
+                    </p>
+                </li>
+            {% endfor %}
+        </ul>
+        <form class="w-full h-1/6 flex justify-center items-center rounded-md overflow-hidden">
+            <input name="message" class="block w-5/6 h-full bg=white p-2 outline-none">
+            <button type="submit" class="block w-1/6 h-full bg-slate-600 hover:bg-slate-500 transition-all text-white p-4">Submit</button>
+        </form>
+    </div>
 {% endblock body %}
