--- a/templates/rooms/list.html
+++ b/templates/rooms/list.html
@@ -27,8 +27,10 @@
                 </td>
                 <td class="border-2 border-slate-100">{{ room.created }}</td>
                 <td class="border-2 border-slate-100">{{ room.members.count }}</td>
-                <td class="border-2 border-slate-100">{{ user in room.members }}</td>
+                <td class="border-2 border-slate-100"></td>
             </tr>
+            {% empty %}
+                <h2 class="text-3xl">No Rooms</h2>
             {% endfor %}
         </tbody>
     </table>
